--- a/kltn/client/src/layout/admin/Restaurant/Restaurant.css
+++ b/kltn/client/src/layout/admin/Restaurant/Restaurant.css
@@ -25,7 +25,7 @@
   
   .image {
     width: 100px;
-    height: 100px;
+    /* height: 100px; */
     object-fit: cover;
     border-radius: 5px;
     margin-right: 20px;
