--- a/kltn/client/src/layout/user/Map/Map.module.css
+++ b/kltn/client/src/layout/user/Map/Map.module.css
@@ -2,3 +2,10 @@
   width: 100%;
   height: 100%;
 }
+.marker {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+}
